#27 GZip batch Ingress