@@ -6,7 +6,7 @@
 
     <artifactId>warp10-java-client</artifactId>
     <groupId>fr.avalonlab.warp10</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
     <name>warp10-java-client</name>
     <description>Warp10 java client and DSL.</description>
@@ -51,17 +51,24 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
 
-        <junit.jupiter.version>5.2.0</junit.jupiter.version>
-        <assertj.core.version>3.10.0</assertj.core.version>
-        <jacoco.agent.version>0.8.2</jacoco.agent.version>
+        <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <assertj.core.version>3.13.2</assertj.core.version>
+        <jacoco.agent.version>0.8.5</jacoco.agent.version>
     </properties>
 
     <dependencies>
         <!-- Javax Modules -->
-        <dependency>
+        <!--dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
+        </dependency-->
+            <!-- Until official release -->
+        <dependency>
+            <groupId>com.jwebmp</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1.1</version>
+            <type>jar</type>
         </dependency>
 
         <!-- Tests -->
@@ -108,10 +115,6 @@
                     <version>3.8.0</version>
                     <configuration>
                         <release>11</release>
-                        <compilerArgs>
-                            <arg>--add-modules</arg>
-                            <arg>javax.inject</arg>
-                        </compilerArgs>
                     </configuration>
                 </plugin>
             </plugins>
